# CS155-Caltech-ML

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: pylint.yml
ml_lib/data/: utils.py
ml_lib/metrics/: metrics_calculator.py
ml_lib/models/: abstractmodel.py  pla.py  polynomial_regression.py
ml_lib/utils/: __init__.py  kfold.py  model_evaluator.py
ml_lib/visualization/: plotter.py
notebooks/: bias_variance_tradeoff.ipynb  classification.ipynb  gradient_descent.ipynb
src/: bias_variance_tradeoff.py  main.py
