[metadata]
name = caltech-cs155-ml
version = 0.0
author = Sapan Agrawal
author_email = sapanagrawal777@gmail.com
description = ML Basics Course
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
install_requires =
    numpy==1.19.5
    scipy==1.10.1
    matplotlib==3.4.3

[options.packages.find]
include = ml_lib